# QASWP

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IETF-DRAFT.txt  LICENSE  Makefile  NOTICE  PUBLISHING.md  README.md  SECURITY.md  WHITEPAPER.md  dev-requirements.txt  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/: CODEOWNERS  FUNDING.yml  release-drafter.yml
.github/workflows/: arxiv-release.yml  benchmarks.yml  ci.yml  claim-tests.yml  codeql.yml  content-guard.yml  coverage.yml  docs.yml  fuzz.yml  lint.yml  proofs.yml  python-tests.yml  qiskit.yml  release-drafter.yml
arxiv/: qaswp_arxiv.tex
benchmarks/: bench_demo.py
docs/: README_INSERT.md  api.md  architecture.md  getting-started.md  index.md
docs/_archive/: IETF-DRAFT.orig.txt  WHITEPAPER.orig.md
examples/: client.py  server.py
proofs/: comp_real.py  entangle.py  qkd_sec.py  test_comp_real.py  test_entangle.py  test_zkml.py  zkml.py
sales/: pitch_email.txt
src/: config.py  neural.py  qaswp.py  qaswp_qiskit.py  qkd.py  zk_sim.py
tests/: conftest.py  test_claims_demo.py  test_flush_public_api.py  test_qaswp.py  test_qiskit_integration_optional.py  test_qiskit_stub.py  test_recv_robust.py  test_recv_robust_lite.py
